OO-3966: Fix small layout issues

--- a/src/main/webapp/static/themes/light/modules/_evaluation_form.scss
+++ b/src/main/webapp/static/themes/light/modules/_evaluation_form.scss
@@ -396,7 +396,8 @@
 		}
 	}
 	
-	.o_evaluation_duration {
+	.o_evaluation_duration,
+	.o_participated_users {
 		display:none;
 	}
 }
